# snapt

./: .gitignore  Cargo.toml  PrivacyPolicy.txt  README.md  build.rs  eula.rtf  resources.h  resources.rc
installer/: eula.rtf  eula.txt  readme.html  readme.txt
resources/: resources.rc
src/: hotkey.rs  hotkey_profile.rs  main.rs  window_manager.rs
src/app/: instance.rs  interface.rs  mod.rs  notification_manager.rs  resources.rs  snapt.rs
src/hotkey/: hotkey_loader.rs  hotkey_profile.rs
src/hotkeys/: hotkey.rs  hotkey_loader.rs  hotkey_profile.rs  listener.rs  loader.rs  mod.rs  profile.rs
src/snapt/: app.rs  control.rs  interface.rs  mod.rs  registration.rs
src/snapt/interface/: mod.rs
src/snapt/interface/base/: mod.rs  notification.rs
src/snapt/interface/primary/: mod.rs
src/window/: dock_manager.rs  dock_position.rs  mod.rs  notification_manager.rs  window_manager.rs  window_state.rs  window_transform.rs
src/window/dock/: manager.rs  mod.rs  position.rs
src/window/monitor/: info.rs
wix/: main.wxs
