[package]
name = "snapt"
version = "0.1.0"
edition = "2018"
authors = ["Joseph DAlbano <jdalbano.dev@gmail.com>"]
license-file = "eula.rtf"
description = "Snapt is a window management app for Windows operating system. It primarily allows docking configuration enabled by hotkey combinations."
readme = "README.md"
homepage = "https://github.com/jdalbano/snapt"
repository = "https://github.com/jdalbano/snapt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = "0.2.8"
winapi = { version = "0.3.9", features = ["winuser", "errhandlingapi", "dwmapi"] }