[package]
name = "snapt"
version = "1.1.0"
edition = "2018"
authors = ["Joseph DAlbano <jdalbano.dev@gmail.com>"]
description = "Snapt is a window management app for Windows operating system. It primarily allows docking configuration enabled by hotkey combinations."
readme = "README.md"
homepage = "https://github.com/jdalbano/snapt"
repository = "https://github.com/jdalbano/snapt"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
embed-resource = "1.4"

[dependencies]
device_query = "0.2.8"
winapi = { version = "0.3.9", features = ["winuser", "errhandlingapi", "dwmapi", "wincon", "shellapi", "libloaderapi", "commctrl", "synchapi", "winerror"] }